--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="My Kanban Board" />
     <title>My Kanban Board</title>
+    <style>
+      html,
+      body,
+      #root {
+        height: 100%;
+      }
+
+      body {
+        margin: 0;
+        background-color: #36393f;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
